# diagram-as-code-with-python

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
diagram_as_code_with_python/: __init__.py  a_complex_web_service.py  simple_web_service.py
